--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "satismeter-loader",
   "version": "1.0.0",
   "description": "Asynchronously load satismeter with an npm module",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:satismeter/satismeter-loader.git"
+  },
+  "readme": "README.md",
   "main": "index.js",
   "scripts": {},
   "keywords": [
